applications/overlays/home/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    "traefik.ingress.kubernetes.io/router.entrypoints": "websecure"
spec:
  tls:
    - hosts:
        - argocd.h.macro.network
  rules:
    - host: argocd.h.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
